* Skeleton working POC (Clashes with Object Location Tones - one of them crashes when opening same MIDI output)

--- a/manifest.ini
+++ b/manifest.ini
@@ -1,6 +1,6 @@
 name = MIDISupport
 summary = "MIDI Support"
-description = """Allows NVDA to use Musical Instrument Digital Interface (MIDI) synthesizers to produce enjoyable and more natural sounding audio cues, instead of default beeps."""
+description = """Allows NVDA to use Musical Instrument Digital Interface (MIDI) synthesizers to produce more natural sounding audio cues, instead of default beeps."""
 author = "Dalen <dbernaca@gmail.com>"
 url = https://github.com/dbernaca/MIDISupport
 version = 1.0.0
